 - Adding two new methods to Stylesheetoperations. DeleteStylesheetByName() and LoadStylesheetByName()
 - TemplatePrecompile and TemplatePostCompile events now have a 'type' parameter to indicate what template type they are compiling.
 - Changing GetTemplateFromFile method return null instead of string
 - Changing the default page now adds an audit entry
 
Core - Bug Reports:
 - #6161 Core Printing Module - Compression issue
 - #7740 HTML entities in the language string aren't getting converted back when sending the email during install

Core - Feature Requests:


Core - General:
 - Adds new front end theme "Simplex"


Core - Installer:
  - mysqli option now selected by default.
  - Add checks for xml handling.

CMSMailer:


FileManager
 - Now uses drag/drop upload for all browsers except IE and maybe opera
 - Now has concept of a 'cwd' that is stored as user preference.
 
MenuManager:
- Added the {cms_breadcrumbs} action (which is templatable).  deprecates {breadcrumbs}
- Fixes #7306 - haschildren always fals
- Adds the action=items capability.
- Adds new Template for Simplex Theme
	

MicroTiny:
 - Two new preferences to assist in managing stylesheet and other background settings.
 - #7223 (fixes for secure admin).
 - Now uses the filemanager cwd() in file picker
 - Now sets the filemanager cwd() in the file picker. 

News:
 - All routes are now registered statically
 - The {news} plugin is now part of the News module
 - The detail page now handles caching well.
 - The detail page now throws a 404 exception for attempts to view expired/draft articles.
 - Full lazyload is now supported.
 - Now supports smarty caching
 - optimization of code to minimize queries (preload field data for summary views).
 - begin more oopification.
 - Generates 404 errors if routed to an invalid article, or an article that is expired/draft.
 - Fixes #7713 - Apply button doesn't work.
 - Fixes #7457 - Duplicate news url
 - Adds detailtemplate param capabilities to SearchResultWithParams